--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
- <!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -28,7 +27,8 @@ h2{margin:6px 0 0;font-size:20px}
 p.lead{color:var(--muted);margin-top:12px}
 .grid{display:grid;grid-template-columns:1fr 360px;gap:20px;margin-top:22px}
 .preview{background:linear-gradient(180deg,#fff,#fffaf5);border-radius:12px;padding:16px;border:1px solid rgba(0,0,0,0.03)}
-.preview .box{height:420px;border-radius:10px;border:1px dashed rgba(0,0,0,0.06);background:linear-gradient(180deg,#fff,#fff9fb);padding:14px;overflow:auto}
+.box{display:flex;flex-direction:column;align-items:center;justify-content:center;background:linear-gradient(180deg,#fffaf6,#fff0f5);border-radius:12px;padding:20px;overflow:auto}
+.box img{border-radius:12px;max-width:100%;margin-bottom:16px;box-shadow:0 4px 20px rgba(0,0,0,0.05);}
 .meta{background:linear-gradient(180deg,#fff,#f8fffe);border-radius:12px;padding:18px;border:1px solid rgba(0,0,0,0.03)}
 .price{font-size:26px;font-weight:600;margin:6px 0}
 .features{margin-top:12px;color:var(--muted);font-size:14px}
@@ -40,6 +40,7 @@ footer{margin-top:18px;color:var(--muted);font-size:13px}
 .thumb{width:120px;border-radius:10px;padding:8px;background:#fff;border:1px dashed rgba(0,0,0,0.04);text-align:center}
 .thumb img{max-width:100%;border-radius:8px}
 .note{font-size:12px;color:var(--muted);margin-top:10px}
+#thank-you{display:none;text-align:center;padding:40px;background:linear-gradient(180deg,#fff0f5,#fffaf6);border-radius:16px;margin-top:20px;box-shadow:0 8px 30px rgba(47,38,63,0.06);}
 @media (max-width:880px){
   .grid{grid-template-columns:1fr;}
   .meta{order:-1}
@@ -59,19 +60,27 @@ footer{margin-top:18px;color:var(--muted);font-size:13px}
 
     <div class="grid">
       <div>
-        <div class="preview" aria-hidden="false">
+        <div class="preview">
           <div class="box" id="preview-area">
-            <!-- Live preview of pattern thumbnails -->
+            <img src="https://via.placeholder.com/360x200/FFE7F0/5b3750?text=Cozy+Crochet+Bundle" alt="Cozy Crochet Bundle Cover">
+            <p style="color:#6c6c72;font-size:14px;text-align:center;">Your Cozy Crochet Bundle preview will appear here. Click “Buy & Download” to unlock the full patterns!</p>
           </div>
         </div>
 
         <div style="margin-top:12px;display:flex;gap:10px;flex-wrap:wrap;align-items:center">
           <button class="btn" id="buy-download">Buy & Download — $8</button>
-          <button class="btn secondary" id="unlock-download" disabled>I’ve Paid — Unlock Download</button>
+          <button class="btn secondary" id="unlock-download">I’ve Paid — Unlock Download</button>
           <button class="btn secondary" id="download-sample">Download Free Sample (Beanie)</button>
         </div>
 
         <p class="small">Clicking <strong>Buy & Download</strong> opens PayPal. Once payment is completed, click <strong>I’ve Paid — Unlock Download</strong> to get the full ZIP bundle.</p>
+
+        <div id="thank-you">
+          <h2 style="font-family:'Pacifico',cursive;color:#5b3750;">Thank You! 🧶✨</h2>
+          <p style="color:#6c6c72;margin-top:12px;font-size:16px;">Your Cozy Crochet Bundle is ready to download! We hope you enjoy your patterns.</p>
+          <button id="download-now" style="margin-top:16px;padding:12px 20px;border-radius:12px;background:linear-gradient(90deg,#ffd1e6,#cfeeff);border:none;color:#2a1630;font-weight:700;cursor:pointer;">Download ZIP</button>
+          <p class="note">Keep this page open until your download starts.</p>
+        </div>
       </div>
 
       <aside class="meta">
@@ -209,8 +218,12 @@ const unlockBtn=document.getElementById('unlock-download');
 document.getElementById('buy-download').addEventListener('click',()=>{window.open(PAYPAL_LINK,'_blank'); unlockBtn.disabled=false;});
 unlockBtn.addEventListener('click',async()=>{
   unlockBtn.disabled=true; unlockBtn.textContent='Preparing your files...';
-  try{ const zipBlob=await generateZip(); saveAs(zipBlob,'cozy_loop_bundle.zip'); unlockBtn.textContent='Downloaded ✓';} 
-  catch(e){console.error(e); alert('Error generating ZIP.'); unlockBtn.disabled=false; unlockBtn.textContent='I’ve Paid — Unlock Download';}
+  const thankYou=document.getElementById('thank-you');
+  thankYou.style.display='block';
+  try{ const zipBlob=await generateZip(); 
+    document.getElementById('download-now').addEventListener('click',()=>{saveAs(zipBlob,'cozy_loop_bundle.zip');});
+    unlockBtn.textContent='Downloaded ✓';
+  } catch(e){console.error(e); alert('Error generating ZIP.'); unlockBtn.disabled=false; unlockBtn.textContent='I’ve Paid — Unlock Download';}
 });
 
 document.getElementById('download-sample').addEventListener('click',()=>{
