--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@ body{margin:0;background:linear-gradient(180deg,var(--bg),#ffffff);color:#222}
 h2{margin:6px 0 0;font-size:20px}
 p.lead{color:var(--muted);margin-top:12px}
 .grid{display:grid;grid-template-columns:1fr 360px;gap:20px;margin-top:22px}
-.preview{background:linear-gradient(180deg,#fff,#fffaf5);border-radius:12px;padding:16px;border:1px solid rgba(0,0,0,0.03)}
-.box{position:relative;display:flex;flex-direction:column;align-items:center;justify-content:center;background:linear-gradient(180deg,#fffaf6,#fff0f5);border-radius:12px;padding:20px;overflow:hidden}
-.box canvas{border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,0.05);transition: transform 0.5s ease;}
-.box:hover canvas{transform: scale(1.05) rotate(-2deg);}
-.box:hover .sparkle{animation-duration:0.7s !important;}
+.preview{border-radius:12px;padding:16px;position:relative;}
 .meta{background:linear-gradient(180deg,#fff,#f8fffe);border-radius:12px;padding:18px;border:1px solid rgba(0,0,0,0.03)}
 .price{font-size:26px;font-weight:600;margin:6px 0}
 .features{margin-top:12px;color:var(--muted);font-size:14px}
@@ -70,9 +66,8 @@ footer{margin-top:18px;color:var(--muted);font-size:13px}
     <div class="grid">
       <div>
         <div class="preview">
-          <div class="box" id="preview-area">
-            <div class="sparkle-container"></div>
-          </div>
+          <canvas id="yarn-canvas" width="360" height="200"></canvas>
+          <div class="sparkle-container"></div>
         </div>
 
         <div style="margin-top:12px;display:flex;gap:10px;flex-wrap:wrap;align-items:center">
@@ -124,11 +119,9 @@ footer{margin-top:18px;color:var(--muted);font-size:13px}
 document.getElementById('year').textContent=new Date().getFullYear();
 const PAYPAL_LINK='https://www.paypal.com/paypalme/dailyblissplanners';
 
-// Create canvas and sparkles
+// Yarn ball & sparkles
 window.addEventListener('DOMContentLoaded',()=>{
-  const previewBox=document.getElementById('preview-area');
-  const canvas=document.createElement('canvas');
-  canvas.width=360; canvas.height=200;
+  const canvas=document.getElementById('yarn-canvas');
   const ctx=canvas.getContext('2d');
 
   // Gradient background
@@ -136,12 +129,21 @@ window.addEventListener('DOMContentLoaded',()=>{
   grad.addColorStop(0,'#FFE7F0'); grad.addColorStop(1,'#FFF0F5');
   ctx.fillStyle=grad; ctx.fillRect(0,0,canvas.width,canvas.height);
 
+  // Yarn ball
+  const centerX=canvas.width/2, centerY=canvas.height/2, radius=50;
+  ctx.fillStyle='#FFB6C1';
+  ctx.beginPath();
+  ctx.arc(centerX, centerY, radius, 0, Math.PI*2);
+  ctx.fill();
+  ctx.strokeStyle='#e695b0'; ctx.lineWidth=3;
+  ctx.beginPath();
+  ctx.arc(centerX, centerY, radius-5, 0, Math.PI*2);
+  ctx.stroke();
+
   // Text
   ctx.fillStyle='#5b3750';
-  ctx.font='bold 20px Pacifico, cursive';
-  ctx.fillText('Cozy Crochet Bundle',20,100);
-
-  previewBox.appendChild(canvas);
+  ctx.font='bold 18px Pacifico, cursive';
+  ctx.fillText('Cozy Crochet Bundle', centerX-100, centerY+80);
 
   // Sparkles
   const container=document.querySelector('.sparkle-container');
@@ -153,6 +155,19 @@ window.addEventListener('DOMContentLoaded',()=>{
     s.style.animationDelay=(Math.random()*2)+'s';
     container.appendChild(s);
   }
+
+  // Thumbnails
+  const thumbs=document.getElementById('thumbs');
+  const thumbnailNames=['Beanie','Scarf','Pouch'];
+  const colors=['#fff6f7','#fffaf0','#f6f0ff'];
+  thumbnailNames.forEach((name,i)=>{
+    const c=document.createElement('canvas'); c.width=120; c.height=80;
+    const ctx2=c.getContext('2d');
+    ctx2.fillStyle=colors[i]; ctx2.fillRect(0,0,120,80);
+    ctx2.fillStyle='#4b2f3f'; ctx2.font='16px serif'; ctx2.fillText(name+' 🧶',10,40);
+    const w=document.createElement('div'); w.className='thumb'; w.appendChild(c);
+    thumbs.appendChild(w);
+  });
 });
 
 // Buttons
