--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ footer{margin-top:18px;color:var(--muted);font-size:13px}
 
 <script>
 const PAYPAL_LINK='https://www.paypal.com/paypalme/dailyblissplanners';
-const ZIP_LINK='cozy_loop_bundle.zip'; 
-const SAMPLE_LINK='Cozy-Beanie-Sample (3).pdf';
+const ZIP_LINK='https://cer27awesome-art.github.io/Cozy-Loop-Studio/cozy_loop_bundle.zip';
+const SAMPLE_LINK='https://cer27awesome-art.github.io/Cozy-Loop-Studio/Cozy-Beanie-Sample.pdf';
 
 document.getElementById('year').textContent=new Date().getFullYear();
 
